<resources>
    <string name="app_name">RunApp</string>
    <string name="home">Home</string>
    <string name="event">Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    -->
    <string name="user_name">USER NAME</string>
    <string name="today">TODAY:</string>
    <string name="_500">500</string>
    <string name="_4_000_steps">/4.000 steps</string>
    <string name="recent_achieved_badge">RECENT ACHIEVED BADGE</string>
    <string name="view_all">View all</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="received">Received</string>
    <string name="_1_watering_can">1 Watering can</string>
    <string name="receive">Receive</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="pesticide">Pesticide</string>
    <string name="month_challenge">Month challenge</string>
    <string name="_3_12_titles">3/12 Titles</string>
    <string name="archived_total_200_000_steps_n_30_08_2022">Archived total 200.000 steps \n 30/08/2022</string>
    <string name="spectacular_breakout">Spectacular Breakout</string>
    <string name="share">Share</string>

    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="ok">OK</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>
    <string name="read_step_data">Read step data</string>

</resources>