<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:background="@drawable/bg_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:elevation="2dp"
            android:src="@drawable/img_x" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:padding="2dp">
            <ImageView
                android:id="@+id/imgDialog"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/huy_chuong2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.example.smac_runapp.customviews.custom_textview.RobotoB
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgDialog"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/spectacular_breakout"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.example.smac_runapp.customviews.custom_textview.RobotoM
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/archived_total_200_000_steps_n_30_08_2022"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShare"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_below="@+id/tv2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_dialog"
                android:gravity="center"
                android:paddingHorizontal="100dp"
                android:text="@string/share"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>