<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.example.smac_runapp.fragment.HomeFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".fragment.HomeFragment">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_270"
                android:scaleType="fitXY"
                android:src="@drawable/img_bg"
                android:layout_marginBottom="@dimen/dimen_15"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16"
                android:background="@drawable/bg_foot_gif"
                android:padding="@dimen/dimen_8">

                <LinearLayout
                    android:id="@+id/todaySteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgFoot"
                        android:layout_width="@dimen/dimen_40"
                        android:layout_height="@dimen/dimen_40"
                        android:src="@drawable/img_step" />

                    <com.example.smac_runapp.customviews.custom_textview.RobotoB
                        android:id="@+id/today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textColor="@color/text_red"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.example.smac_runapp.customviews.custom_textview.RobotoM
                        android:id="@+id/numSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_5"
                        android:text="@string/_500"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.example.smac_runapp.customviews.custom_textview.RobotoM
                        android:id="@+id/lastSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_000_steps"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <com.example.smac_runapp.customviews.MySeekBar
                    android:id="@+id/seekbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_200"
                    android:layout_below="@+id/todaySteps"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/dimen_5"
                    android:layout_marginTop="-50dp"
                    android:foregroundGravity="center"
                    app:barColor="@color/black"
                    app:barHeight="20"
                    app:indicatorColor="@color/text_red"
                    app:progress="0.3"
                    app:progressColor="@color/text_red" />

            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/layout_tab"
                android:layout_marginTop="@dimen/dimen_15"
                style="@style/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_40"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_tablayout" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_400"
                android:layout_marginHorizontal="@dimen/dimen_12"
                android:layout_marginVertical="@dimen/dimen_20" />

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_12"
                android:layout_marginVertical="@dimen/dimen_16"
                android:background="@drawable/bg_foot_gif"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_8"
                    android:paddingVertical="@dimen/dimen_10">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/huyChuong1"
                            android:layout_width="@dimen/dimen_30"
                            android:layout_height="@dimen/dimen_30"
                            android:layout_centerVertical="true"
                            android:src="@drawable/huy_huong1" />

                        <com.example.smac_runapp.customviews.custom_textview.RobotoB
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/huyChuong1"
                            android:text="@string/recent_achieved_badge"
                            android:textColor="@color/text_red"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <com.example.smac_runapp.customviews.custom_textview.RobotoM
                        android:id="@+id/view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:text="@string/view_all"
                        android:textColor="@color/view_all"
                        android:textSize="16sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>